Fix wrapping of emojis

--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,7 @@
     white-space: nowrap;
 }
 
-#bun-emoji {
+.bun-emoji {
     color: white;
     white-space: nowrap
 }
